Alteração no Front

--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,11 +1,11 @@
-.container {
+.nav1 {
     height: 100%;
  }
  
  .sidenav {
     width: 13rem;
-    color: white;
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);
+    color: rgb(0, 0, 0);
+    background-color: #FFFFFF;
  }
  
  img {
@@ -15,7 +15,7 @@
  }
  
  .sidenav a {
-    color: white;
+    color: rgb(0, 0, 0);
  }
  
  .sidenav i {
@@ -24,6 +24,6 @@
  
  .menu {
     margin: 1rem 0 0 1rem;
-    color: white;
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);
+    color: rgb(0, 0, 0);
+    background-color: #ffffff;;
  }
