--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,6 @@
-<mat-card class="card mat-elevation-z8">
-    <mat-card-header>
-      <mat-card-title>SYSCOMN</mat-card-title>
-      <mat-card-subtitle></mat-card-subtitle>
-    </mat-card-header>
+
+  
+  
+  <img src="https://lh4.googleusercontent.com/65ksZ3WChjnbCmyP-i7r_O3KH6FMVrFNmMtR-67N0kal9Xvsml01FPwRgOq98AlRO_sErqt_8xew9g=w1920-h961-rw" class="rounded mx-auto d-block" alt="...">
     
-    <mat-card-content>
-      <p>
-       
-       
-      </p>
-    </mat-card-content>
-  </mat-card>
+  
