--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="container" autosize>
+<mat-drawer-container class="nav1 " autosize>
     <mat-drawer #drawer class="sidenav" mode="side">
       <mat-nav-list class="nav-list">
           <a mat-list-item routerLink="home">
@@ -52,7 +52,11 @@
   <i class="material-icons">language</i>
   Regime Engorda
 </a>
+
+
       </mat-nav-list>
+
+      
     </mat-drawer>
   
     <div class="sidenav-content">
