Modificaçoes no Front

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 
   
   
-  <img src="https://lh4.googleusercontent.com/65ksZ3WChjnbCmyP-i7r_O3KH6FMVrFNmMtR-67N0kal9Xvsml01FPwRgOq98AlRO_sErqt_8xew9g=w1920-h961-rw" class="rounded mx-auto d-block" alt="...">
+  <img src="../../img/boi.jpg" class="rounded mx-auto d-block" alt="...">
+  
     
   
