--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -5,7 +5,7 @@
  .sidenav {
     width: 13rem;
     color: rgb(0, 0, 0);
-    background-color: #FFFFFF;
+    background-color: #F5F5F5;
  }
  
  img {
@@ -27,3 +27,11 @@
     color: rgb(0, 0, 0);
     background-color: #ffffff;;
  }
+
+
+
+
+
+
+
+
