--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,7 @@
-<mat-drawer-container class="nav1 " autosize>
-    <mat-drawer #drawer class="sidenav" mode="side">
+
+<mat-sidenav-container class="nav1 " autosize>
+    <mat-sidenav #drawer opened class="sidenav" mode="side">
+      
       <mat-nav-list class="nav-list">
           <a mat-list-item routerLink="home">
         <i class="material-icons">home</i>
@@ -57,7 +59,7 @@
       </mat-nav-list>
 
       
-    </mat-drawer>
+    </mat-sidenav>
   
     <div class="sidenav-content">
       <button class="menu mat-elevation-z8" (click)="drawer.toggle()" mat-icon-button>
@@ -66,6 +68,6 @@
       <router-outlet></router-outlet>
     </div>
   
-  </mat-drawer-container>
+  </mat-sidenav-container>
 
   
